# TransitOps

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/api/: dependencies.py  router.py
backend/api/admin/: router.py
backend/api/analytics/: router.py  schemas.py
backend/api/authentication/: router.py  schemas.py  security.py
backend/api/chat/: router.py
backend/api/documents/: router.py
backend/api/finance/: router.py  schemas.py
backend/api/fleet/: router.py  schemas.py
backend/api/operations/: router.py  schemas.py  scratch_test_operations.py
docs/: ARCHITECTURE.md
frontend/: .gitignore  .npmrc  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardLayout.tsx
frontend/src/components/dashboard/: AddDriverDialog.tsx  AddExpenseDialog.tsx  AddFuelDialog.tsx  AddMaintenanceDialog.tsx  AddVehicleDialog.tsx  AskTransitOps.tsx  CompleteTripDialog.tsx  DriverRegistryTable.tsx  FilterRibbon.tsx  FuelExpensesContent.tsx  Header.tsx  InteractiveMap.tsx  KpiGrid.tsx  MaintenanceRegistryTable.tsx  RecentTrips.tsx  Sidebar.tsx  VehicleRegistryTable.tsx  (+1 more)
frontend/src/lib/: auth.tsx  exportAnalytics.ts  i18n.ts  theme.tsx
frontend/src/locales/: en.json  es.json  hi.json
frontend/src/pages/: AnalyticsPage.tsx  ComingSoonPage.tsx  DashboardPage.tsx  DriverRegistryPage.tsx  FuelExpensesPage.tsx  LoginPage.tsx  MaintenancePage.tsx  SettingsPage.tsx  TripsPage.tsx  VehicleRegistryPage.tsx
(+2 files in other folders)
