[project]
name = "transitops-backend"
version = "0.1.0"
description = "TransitOps Smart Transport Operations Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.1",
]
